force-app/main/default/objects/DocumentSection__c/DocumentSection__c.object-meta.xml
<CustomObject>
    <label>Document Section</label>
    <nameField>
        <label>Document Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>