force-app/main/default/objects/DocumentSection__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>The ID of the record in the source system. Required when SourceSystemExternalId is not null. Must be unique within the same source system but not across all records in Salesforce.</description>
    <inlineHelpText>The ID of the record in the source system. Required when SourceSystemExternalId is not null. Must be unique within the same source system but not across all records in Salesforce.</inlineHelpText>
    <label>External Id</label>
    <length>174</length>
    <type>Text</type>
</CustomField>