force-app/main/default/objects/DocumentSection__c/fields/IsGuestroomSection__c.field-meta.xml
<CustomField>
    <fullName>IsGuestroomSection__c</fullName>
    <label>Is Guestroom Section</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>