force-app/main/default/objects/DocumentSection__c/fields/IsPackagesSection__c.field-meta.xml
<CustomField>
    <fullName>IsPackagesSection__c</fullName>
    <label>Is Packages Section</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>